# visual_du

./: Cargo.toml  Makefile.toml  build.rs  rustfmt.toml
.cargo/: config.toml
assets/fonts/: Hack-LICENSE
assets/shaders/example/: poly_rect.wgsl
demo/c/a/a/b/2/: FILE
example/: custom_pipeline.rs  walk_dir.rs  walk_dir_example.rs
example/example_hierarchy/: a  b
example/example_hierarchy/1/1.2/: c
example/example_hierarchy/2/2.1/: a
example/example_hierarchy/2/2.2/: a
example/example_hierarchy/3/: a
example/example_hierarchy/3/3.3/: a
example/example_hierarchy/3/3.3/3.3.2/: a
example/example_hierarchy/3/3.9/: a
src/: app_scaffold.rs  du_fs_plugin.rs  du_plugin.rs  du_tree_view_plugin.rs  fs_graph_plugin.rs  fs_test.rs  hello.rs  input_plugin.rs  lib.rs  main.rs  mouse_interactions_plugin.rs  walk_dir_level_order.rs
src/debug/: debug_plugin.rs  fmt.rs  mod.rs  sprite_count_diagnostics_plugin.rs
src/fs/: du_fs_plugin.rs  du_plugin.rs  mod.rs  walk_dir_level_order.rs  walk_dir_plugin.rs
src/render/: mod.rs  poly_rect.rs
src/trace/: fmt.rs
src/ui/: du_tree_view_plugin.rs  mod.rs  mouse_interactions_plugin.rs  tree_view_color_theme.rs  tree_view_plugin.rs  tree_view_theme.rs
