[package]
edition = "2021"
name = "visual_du"
version = "0.1.0"

[dependencies]
ansi_term = "0.12"
bevy = {version = "0.7.0", features = ["dynamic", "trace"]}
bevy_framepace = "0.4.0"
bevy_prototype_lyon = "0.5.0"
bevy-embasset = "0.5.0"
colorous = "1.0"
crossbeam-channel = "0.5.4"
grouping_by = "0.2.2"
tracing = {version = "0.1", features = ["valuable"]}
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3", features = ["valuable"]}
valuable = {version = "0.1.0", features = ["std"]}
valuable-derive = "0.1.0"
walkdir = "2.3.2"

[build-dependencies]
bevy-embasset = { version = "0.5.0", features = ["build"] }

[lib]
name = "visual_du"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[example]]
name = "walk_dir_example"
path = "example/walk_dir_example.rs"
